page will be height of screen at minumum and fixed mobile overflow issues

--- a/about.css
+++ b/about.css
@@ -1,6 +1,14 @@
+body {
+    display:flex;
+    flex-direction: column;
+}
+
 #content {
     display: flex;
+    flex: 1;
+    min-height: 0;
     justify-content: center;
+    align-items: center;
     background: #232323;
     padding: 40px 10px;
     gap: 50px;
@@ -11,7 +19,6 @@
     display: flex;
     width: 640px;
     border: 6px solid #4b607f;
-    height: 100%;
 }
 
 #intro-text {
@@ -45,6 +52,7 @@
     }
 
     #content {
+        flex: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -56,7 +64,7 @@
         max-width: 640px;
         min-width: 0px;
         margin-bottom: 0px;
-        paddding-bottom: 0px;
+        padding-bottom: 0px;
     }
 
     #intro-video {
@@ -68,5 +76,12 @@
     .mobile-text-break {
         display: none;
     }
+}
+
+@media (max-height: 800px){
+    #content {
+        flex: none;
+    }
+
 }
 
