--- a/global.css
+++ b/global.css
@@ -8,7 +8,8 @@
 }
 
 html, body {
-    overflow-x: auto;
+    overflow: auto;
+    height: 100%;
     margin: 0px;
 }
 
